my skill section scss all design raw Values added

--- a/portfolio/src/app/sections/myskills/myskills.component.scss
+++ b/portfolio/src/app/sections/myskills/myskills.component.scss
@@ -379,6 +379,486 @@
             background: #89bcd9;
           }
         }
+
+        .skill_Material_Design {
+          width: Hug (76px) px;
+          height: Fixed (124px) px;
+          gap: 10px;
+          opacity: 0px;
+
+          > .icons {
+            width: Hug (60px) px;
+            height: Fixed (60px) px;
+            gap: 10px;
+            opacity: 0px;
+
+            > .icons_Material_Design_Frame {
+              width: 60px;
+              height: 60px;
+              gap: 0px;
+              opacity: 0px;
+              > .icons_Material_Design_Group {
+                width: 60px;
+                height: 60px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+
+                > .icons_Material_Design_Group1 {
+                  width: 34px;
+                  height: 33.9px;
+                  top: 11.1px;
+                  left: 13px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+
+                  > .icons_Material_Design_Group1_Vektor1 {
+                    width: 34px;
+                    height: 33.9px;
+                    top: 11.1px;
+                    left: 13px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+                }
+
+                .icons_Material_Design_Group2 {
+                  width: 37.8px;
+                  height: 37.8px;
+                  top: 11.1px;
+                  left: 11.1px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+
+                  > .icons_Material_Design_Group2_Vektor1 {
+                    width: 17.3px;
+                    height: 34.7px;
+                    top: 14.2px;
+                    left: 31.6px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group2_Vektor2 {
+                    width: 34px;
+                    height: 33.9px;
+                    top: 11.1px;
+                    left: 13px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group2_Vektor3 {
+                    width: 17.3px;
+                    height: 34.7px;
+                    top: 14.2px;
+                    left: 11.1px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+                }
+
+                .icons_Material_Design_Group3 {
+                  width: 60px;
+                  height: 60px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+
+                  > .icons_Material_Design_Group3_Vektor1 {
+                    width: 7.9px;
+                    height: 40.4px;
+                    top: 9.8px;
+                    left: 52.1px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor2 {
+                    width: 40.4px;
+                    height: 7.9px;
+                    top: 52.1px;
+                    left: 9.8px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor3 {
+                    width: 17.3px;
+                    height: 34.7px;
+                    top: 14.2px;
+                    left: 31.6px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor4 {
+                    width: 40.4px;
+                    height: 7.9px;
+                    left: 9.8px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor5 {
+                    width: 34px;
+                    height: 33.9px;
+                    top: 11.1px;
+                    left: 13px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor6 {
+                    width: 17.3px;
+                    height: 34.7px;
+                    top: 14.2px;
+                    left: 11.1px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+
+                  .icons_Material_Design_Group3_Vektor7 {
+                    width: 7.9px;
+                    height: 40.5px;
+                    top: 9.8px;
+                    gap: 0px;
+                    opacity: 0px;
+
+                    background: #89bcd9;
+                  }
+                }
+              }
+            }
+          }
+
+          .material_Design_Name {
+            width: 76px;
+            height: 44px;
+            gap: 0px;
+            opacity: 0px;
+
+            //styleName: Version 5 Web/P;
+            font-family: Josefin Sans;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 21.6px;
+            text-align: center;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+
+            background: #89bcd9;
+          }
+        }
+
+        .skill_Icon_Scrum {
+          width: Hug (64.11px) px;
+          height: Fixed (100px) px;
+          gap: 10px;
+          opacity: 0px;
+
+          > .icons {
+            width: Hug (64.11px) px;
+            height: Fixed (60px) px;
+            gap: 10px;
+            opacity: 0px;
+
+            > .icons_Scrum {
+              width: 64.11px;
+              height: 60px;
+              gap: 0px;
+              opacity: 0px;
+
+              background: #89bcd9;
+
+              > .icons_Scrum_Group1 {
+                width: 47.58px;
+                height: 43.22px;
+                top: 13.39px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+
+                > .icons_Scrum_Group1_Vektor1 {
+                  width: 47.58px;
+                  height: 43.22px;
+                  top: 13.39px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+                }
+              }
+
+              .icons_Scrum_Group2 {
+                width: 28.9px;
+                height: 13.31px;
+                top: 46.7px;
+                left: 35.22px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+
+                > .icons_Scrum_Group2_Vektor1 {
+                  width: 28.9px;
+                  height: 13.31px;
+                  top: 46.7px;
+                  left: 35.22px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+                }
+              }
+
+              .icons_Scrum_Group3 {
+                width: 35.04px;
+                height: 23.71px;
+                left: 27.72px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+
+                > .icons_Scrum_Group3_Vektor1 {
+                  width: 35.04px;
+                  height: 23.71px;
+                  left: 27.72px;
+                  gap: 0px;
+                  opacity: 0px;
+
+                  background: #89bcd9;
+                }
+              }
+            }
+          }
+
+          .scrum_Name {
+            width: 51px;
+            height: 22px;
+            gap: 0px;
+            opacity: 0px;
+
+            //styleName: Version 5 Web/P;
+            font-family: Josefin Sans;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 21.6px;
+            text-align: left;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+
+            background: #89bcd9;
+          }
+        }
+      }
+    }
+
+    .currently_Learning {
+      width: 375px;
+      height: 391px;
+      gap: 28px;
+      opacity: 0px;
+
+      > .currently_Learning_Text {
+        width: 194px;
+        height: 23px;
+        top: 81px;
+        left: 91px;
+        gap: 0px;
+        opacity: 0px;
+
+        //styleName: Version 5 Web/P;
+        font-family: Josefin Sans;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21.6px;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+
+        background: #f8f5ec;
+      }
+
+      .currently_Learning_Text_About_Me {
+        width: 307px;
+        height: 105px;
+        top: 196px;
+        left: 34px;
+        gap: 0px;
+        opacity: 0px;
+
+        //styleName: Version 5 Web/P;
+        font-family: Josefin Sans;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21.6px;
+        text-align: center;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+
+        background: #f8f5ec;
+      }
+
+      .icons_React_And_Vue_Js {
+        width: Hug (100px) px;
+        height: Hug (54px) px;
+        top: 123px;
+        left: 135px;
+        gap: 24px;
+        opacity: 0px;
+      }
+
+      > .frame_301 {
+        width: Hug (36px) px;
+        height: Hug (54px) px;
+        gap: 5px;
+        opacity: 0px;
+
+        > .frame_301_React_Icon {
+          width: 32px;
+          height: 32px;
+          gap: 0px;
+          opacity: 0px;
+
+          > .frame_301_React_Icon_Group16 {
+            width: 32px;
+            height: 28.56px;
+            top: 1.33px;
+            gap: 0px;
+            opacity: 0px;
+
+            background: #f8f5ec;
+
+            > .frame_301_React_Icon_Group16_Vektor1 {
+              width: 32px;
+              height: 28.56px;
+              top: 1.33px;
+              gap: 0px;
+              opacity: 0px;
+
+              background: #89bcd9;
+            }
+
+            .frame_301_React_Icon_Group16_Vektor2 {
+              width: 5.7px;
+              height: 5.7px;
+              top: 12.74px;
+              left: 13.14px;
+              gap: 0px;
+              opacity: 0px;
+
+              background: #f8f5ec;
+            }
+          }
+        }
+
+        .frame_301_React_Icon_Text {
+          width: 36px;
+          height: 17px;
+          gap: 0px;
+          opacity: 0px;
+
+          //styleName: Version 5 Web/Small text;
+          font-family: Josefin Sans;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 16.8px;
+          text-align: center;
+          text-underline-position: from-font;
+          text-decoration-skip-ink: none;
+
+          background: #f8f5ec;
+        }
+      }
+
+      .frame_302 {
+        width: Hug (40px) px;
+        height: Hug (54px) px;
+        gap: 5px;
+        opacity: 0px;
+
+        > .frame_302_VueJs_Icon {
+          width: 32px;
+          height: 32px;
+          gap: 0px;
+          opacity: 0px;
+
+          > .frame_302_VueJs_Icon_Group17 {
+            width: 32px;
+            height: 27.71px;
+            top: 2.67px;
+            gap: 0px;
+            opacity: 0px;
+
+            > .frame_302_VueJs_Icon_Group17_Vektor1 {
+              width: 19.2px;
+              height: 16.63px;
+              top: 2.67px;
+              left: 6.4px;
+              gap: 0px;
+              opacity: 0px;
+
+              background: #f8f5ec;
+            }
+
+            .frame_302_VueJs_Icon_Group17_Vektor2 {
+              width: 32px;
+              height: 27.71px;
+              top: 2.67px;
+              gap: 0px;
+              opacity: 0px;
+
+              background: #89bcd9;
+            }
+          }
+        }
+
+        .frame_302_VueJs_Icon_Text {
+          width: 40px;
+          height: 17px;
+          gap: 0px;
+          opacity: 0px;
+
+          //styleName: Version 5 Web/Small text;
+          font-family: Josefin Sans;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 16.8px;
+          text-align: center;
+          text-underline-position: from-font;
+          text-decoration-skip-ink: none;
+
+          background: #f8f5ec;
+        }
       }
     }
   }
