my skill section scss all design raw Values added

--- a/portfolio/src/app/sections/myskills/myskills.component.scss
+++ b/portfolio/src/app/sections/myskills/myskills.component.scss
@@ -735,129 +735,148 @@
         left: 135px;
         gap: 24px;
         opacity: 0px;
-      }
 
-      > .frame_301 {
-        width: Hug (36px) px;
-        height: Hug (54px) px;
-        gap: 5px;
-        opacity: 0px;
-
-        > .frame_301_React_Icon {
-          width: 32px;
-          height: 32px;
-          gap: 0px;
+        > .frame_301 {
+          width: Hug (36px) px;
+          height: Hug (54px) px;
+          gap: 5px;
           opacity: 0px;
 
-          > .frame_301_React_Icon_Group16 {
+          > .frame_301_React_Icon {
             width: 32px;
-            height: 28.56px;
-            top: 1.33px;
+            height: 32px;
             gap: 0px;
             opacity: 0px;
 
-            background: #f8f5ec;
-
-            > .frame_301_React_Icon_Group16_Vektor1 {
+            > .frame_301_React_Icon_Group16 {
               width: 32px;
               height: 28.56px;
               top: 1.33px;
               gap: 0px;
               opacity: 0px;
 
-              background: #89bcd9;
-            }
-
-            .frame_301_React_Icon_Group16_Vektor2 {
-              width: 5.7px;
-              height: 5.7px;
-              top: 12.74px;
-              left: 13.14px;
-              gap: 0px;
-              opacity: 0px;
-
               background: #f8f5ec;
+
+              > .frame_301_React_Icon_Group16_Vektor1 {
+                width: 32px;
+                height: 28.56px;
+                top: 1.33px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+              }
+
+              .frame_301_React_Icon_Group16_Vektor2 {
+                width: 5.7px;
+                height: 5.7px;
+                top: 12.74px;
+                left: 13.14px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #f8f5ec;
+              }
             }
           }
-        }
 
-        .frame_301_React_Icon_Text {
-          width: 36px;
-          height: 17px;
-          gap: 0px;
-          opacity: 0px;
-
-          //styleName: Version 5 Web/Small text;
-          font-family: Josefin Sans;
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 16.8px;
-          text-align: center;
-          text-underline-position: from-font;
-          text-decoration-skip-ink: none;
-
-          background: #f8f5ec;
-        }
-      }
-
-      .frame_302 {
-        width: Hug (40px) px;
-        height: Hug (54px) px;
-        gap: 5px;
-        opacity: 0px;
-
-        > .frame_302_VueJs_Icon {
-          width: 32px;
-          height: 32px;
-          gap: 0px;
-          opacity: 0px;
-
-          > .frame_302_VueJs_Icon_Group17 {
-            width: 32px;
-            height: 27.71px;
-            top: 2.67px;
+          .frame_301_React_Icon_Text {
+            width: 36px;
+            height: 17px;
             gap: 0px;
             opacity: 0px;
 
-            > .frame_302_VueJs_Icon_Group17_Vektor1 {
-              width: 19.2px;
-              height: 16.63px;
-              top: 2.67px;
-              left: 6.4px;
-              gap: 0px;
-              opacity: 0px;
+            //styleName: Version 5 Web/Small text;
+            font-family: Josefin Sans;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 16.8px;
+            text-align: center;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
 
-              background: #f8f5ec;
-            }
+            background: #f8f5ec;
+          }
+        }
 
-            .frame_302_VueJs_Icon_Group17_Vektor2 {
+        .frame_302 {
+          width: Hug (40px) px;
+          height: Hug (54px) px;
+          gap: 5px;
+          opacity: 0px;
+
+          > .frame_302_VueJs_Icon {
+            width: 32px;
+            height: 32px;
+            gap: 0px;
+            opacity: 0px;
+
+            > .frame_302_VueJs_Icon_Group17 {
               width: 32px;
               height: 27.71px;
               top: 2.67px;
               gap: 0px;
               opacity: 0px;
 
-              background: #89bcd9;
+              > .frame_302_VueJs_Icon_Group17_Vektor1 {
+                width: 19.2px;
+                height: 16.63px;
+                top: 2.67px;
+                left: 6.4px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #f8f5ec;
+              }
+
+              .frame_302_VueJs_Icon_Group17_Vektor2 {
+                width: 32px;
+                height: 27.71px;
+                top: 2.67px;
+                gap: 0px;
+                opacity: 0px;
+
+                background: #89bcd9;
+              }
             }
           }
-        }
 
-        .frame_302_VueJs_Icon_Text {
-          width: 40px;
-          height: 17px;
+          .frame_302_VueJs_Icon_Text {
+            width: 40px;
+            height: 17px;
+            gap: 0px;
+            opacity: 0px;
+
+            //styleName: Version 5 Web/Small text;
+            font-family: Josefin Sans;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 16.8px;
+            text-align: center;
+            text-underline-position: from-font;
+            text-decoration-skip-ink: none;
+
+            background: #f8f5ec;
+          }
+        }
+      }
+
+      .references_Shape {
+        width: 375px;
+        height: 391px;
+        gap: 0px;
+        opacity: 0px;
+
+        > .references_Shape_Shape {
+          width: 368.59px;
+          height: 380px;
+          top: 2.68px;
+          left: 1.15px;
           gap: 0px;
           opacity: 0px;
+          // angle: -0 deg;   to work on
 
-          //styleName: Version 5 Web/Small text;
-          font-family: Josefin Sans;
-          font-size: 14px;
-          font-weight: 400;
-          line-height: 16.8px;
-          text-align: center;
-          text-underline-position: from-font;
-          text-decoration-skip-ink: none;
-
-          background: #f8f5ec;
+          background: #89bcd912;
         }
       }
     }
