profile picture and background first try

--- a/portfolio/src/app/sections/hero/hero.component.html
+++ b/portfolio/src/app/sections/hero/hero.component.html
@@ -1,1 +1,13 @@
-<p>hero works!</p>
+<div class="hero_Section">
+  <div
+    class="pic_BG_Shape"
+    (mouseover)="onMouseOver()"
+    (mouseleave)="onMouseLeave()"
+  >
+    <!-- Profilbild -->
+    <img
+      src="assets/img/app/sections/1_Hero_Section/Default/subject 1.png"
+      alt="Userpicture"
+    />
+  </div>
+</div>
