--- a/portfolio/src/app/sections/hero/hero.component.scss
+++ b/portfolio/src/app/sections/hero/hero.component.scss
@@ -1,6 +1,7 @@
 .hero_Section {
-  width: 1214px;
-  height: 685px;
+  background-color: #262e34;
+  width: 1440px;
+  height: 100vh;
   top: 79px;
   left: 114px;
   gap: 0px;
@@ -172,56 +173,55 @@
     }
   }
 }
+//----------------------------------------------//
 
 .pic_BG_Shape {
-  width: 616px;
-  height: 690px;
-  top: -5px;
-  left: 4px;
+  position: relative;
+  width: 600px;
+  height: 625px;
+  top: 200px;
+  left: 12px;
   gap: 0px;
   opacity: 0px;
-  > .subject_1 {
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url("../../../assets/img/app/sections/1_Hero_Section/Default/Property1Default.png");
+    background-size: 100% 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+
+    transition: background-image 1s ease, transform 1s ease;
+
+    z-index: 0;
+  }
+
+  &:hover::before {
+    background-image: url("../../../assets/img/app/sections/1_Hero_Section/Hover/Property1hover.png");
+    background-size: 100% 100%;
+    background-position: bottom;
+    transform: rotate(7deg);
+  }
+
+  > img {
+    position: relative;
     width: 500px;
     height: 693px;
-    top: -2px;
-    left: 59px;
+    top: -72px;
+    left: 40px;
     gap: 0px;
-    opacity: 0px;
-  }
-  .subtract {
-    width: [object Object]px;
-    height: [object Object]px;
-    top: -38px;
-    left: 39px;
-    gap: 0px;
-    opacity: 0px;
-    > .pic {
-      width: 447px;
-      height: 688px;
-      top: 25px;
-      left: 63px;
-      gap: 0px;
-      opacity: 0px;
-    }
-  }
-  .bg_Shape {
-    width: 600px;
-    height: 619px;
-    top: 76px;
-    left: 18px;
-    gap: 0px;
-    opacity: 0px;
-    > .bg_Shape_For_Photo {
-      width: 580.28px;
-      height: 609.91px;
-      left: 2px;
-      gap: 0px;
-      opacity: 0px;
-      background: #89bcd9;
-    }
+    opacity: 1;
+    z-index: 1;
   }
 }
 
+//-------------------------------------------------//
 .name {
   width: 610px;
   height: 81px;
